fix: hero overflow 속성 변경

--- a/style.css
+++ b/style.css
@@ -76,6 +76,8 @@ body {
 /* hero 스타일 */
 .hero {
     position: relative;
+    width: 1440px;
+    overflow: hidden;
 }
 
 .overlay_image {
